// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'ADMIN' and input 'ALL_CORRECT_BUT_TO_BEFORE_FROM' > hash = 8b1aecb7f25fa28a0f0175fd11696662f3f6d0a91fc2949e3c34960f06ceb983 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "admin",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "ADMIN",
      "inputFiller": [Function],
      "inputFillerName": "ALL_CORRECT_BUT_TO_BEFORE_FROM",
    },
    "err": [IllegalArgumentError: The check-in date must be before the checkout date],
    "hash": "8b1aecb7f25fa28a0f0175fd11696662f3f6d0a91fc2949e3c34960f06ceb983",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": "AF",
        "from": "2022-07-14",
        "roomsCount": 1,
        "to": "2022-07-12",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'ADMIN' and input 'ALL_WITH_EXAMPLES' > hash = 3079f7889648ee6ee9f068636e85b016b7d80e630c578acc053762cafedaf7e8 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "admin",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "ADMIN",
      "inputFiller": [Function],
      "inputFillerName": "ALL_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "3079f7889648ee6ee9f068636e85b016b7d80e630c578acc053762cafedaf7e8",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": "AF",
        "from": "2022-07-14",
        "roomsCount": 1,
        "to": "2022-07-20",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'ADMIN' and input 'ONLY_MANDATORY_WITH_EXAMPLES' > hash = 2797b646782707d1853a4c358056fee736132cbafbb786b2fe8194670c33b7c2 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "admin",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "ADMIN",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_MANDATORY_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "2797b646782707d1853a4c358056fee736132cbafbb786b2fe8194670c33b7c2",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": "AF",
        "from": "2022-07-14",
        "roomsCount": 1,
        "to": "2022-07-20",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'ADMIN' and input 'ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPL…' > hash = 467b9af3505fc9f0d31893ea1458798314b146a7f6fae1fa7ecb38f00fc367f2 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "admin",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "ADMIN",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPLES",
    },
    "err": [IllegalArgumentError: Country must be filled],
    "hash": "467b9af3505fc9f0d31893ea1458798314b146a7f6fae1fa7ecb38f00fc367f2",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": undefined,
        "from": undefined,
        "roomsCount": 1,
        "to": undefined,
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'ANONYMOUS' and input 'ALL_CORRECT_BUT_TO_BEFORE_FROM' > hash = b0fce06365e4a94fe8fe1a37535a7f423c7d7994fef2976f43a067611290f64f 1`] = `
{
  "out": {
    "args": {
      "auth": null,
      "authName": "ANONYMOUS",
      "inputFiller": [Function],
      "inputFillerName": "ALL_CORRECT_BUT_TO_BEFORE_FROM",
    },
    "err": [IllegalArgumentError: The check-in date must be before the checkout date],
    "hash": "b0fce06365e4a94fe8fe1a37535a7f423c7d7994fef2976f43a067611290f64f",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": "AF",
        "from": "2022-07-14",
        "roomsCount": 1,
        "to": "2022-07-12",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'ANONYMOUS' and input 'ALL_WITH_EXAMPLES' > hash = bc46e949313a03bcdd145789c49ccd1e23953a3a8f2d8587be963cc39dfeb25a 1`] = `
{
  "out": {
    "args": {
      "auth": null,
      "authName": "ANONYMOUS",
      "inputFiller": [Function],
      "inputFillerName": "ALL_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "bc46e949313a03bcdd145789c49ccd1e23953a3a8f2d8587be963cc39dfeb25a",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": "AF",
        "from": "2022-07-14",
        "roomsCount": 1,
        "to": "2022-07-20",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'ANONYMOUS' and input 'ONLY_MANDATORY_WITH_EXAMPLES' > hash = e7110fb31ffa2d7b038a0a6478263b978672043e2cded129635368616173a858 1`] = `
{
  "out": {
    "args": {
      "auth": null,
      "authName": "ANONYMOUS",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_MANDATORY_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "e7110fb31ffa2d7b038a0a6478263b978672043e2cded129635368616173a858",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": "AF",
        "from": "2022-07-14",
        "roomsCount": 1,
        "to": "2022-07-20",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'ANONYMOUS' and input 'ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPL…' > hash = 92f9d2a6d119bbf30f727541b5ce15b77c8555d585ebae924689207b367276b7 1`] = `
{
  "out": {
    "args": {
      "auth": null,
      "authName": "ANONYMOUS",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPLES",
    },
    "err": [IllegalArgumentError: Country must be filled],
    "hash": "92f9d2a6d119bbf30f727541b5ce15b77c8555d585ebae924689207b367276b7",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": undefined,
        "from": undefined,
        "roomsCount": 1,
        "to": undefined,
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'REGULAR' and input 'ALL_CORRECT_BUT_TO_BEFORE_FROM' > hash = 425ba3f06a8fba28ddad411f6d0cbb708c25c851b32b62dc2d4faa8d5411f6e2 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "regular",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "REGULAR",
      "inputFiller": [Function],
      "inputFillerName": "ALL_CORRECT_BUT_TO_BEFORE_FROM",
    },
    "err": [IllegalArgumentError: The check-in date must be before the checkout date],
    "hash": "425ba3f06a8fba28ddad411f6d0cbb708c25c851b32b62dc2d4faa8d5411f6e2",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": "AF",
        "from": "2022-07-14",
        "roomsCount": 1,
        "to": "2022-07-12",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'REGULAR' and input 'ALL_WITH_EXAMPLES' > hash = 59f2d3dd95d34a3ad003902e62ec73d2a21930a83d77abe75b4bff1b8d862009 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "regular",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "REGULAR",
      "inputFiller": [Function],
      "inputFillerName": "ALL_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "59f2d3dd95d34a3ad003902e62ec73d2a21930a83d77abe75b4bff1b8d862009",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": "AF",
        "from": "2022-07-14",
        "roomsCount": 1,
        "to": "2022-07-20",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'REGULAR' and input 'ONLY_MANDATORY_WITH_EXAMPLES' > hash = 18221d8c322c2300e8152a29804740afc9a529b50c78c1f61ae3b33292fbde97 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "regular",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "REGULAR",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_MANDATORY_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "18221d8c322c2300e8152a29804740afc9a529b50c78c1f61ae3b33292fbde97",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": "AF",
        "from": "2022-07-14",
        "roomsCount": 1,
        "to": "2022-07-20",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'REGULAR' and input 'ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPL…' > hash = 850ef644d4bf7485d41306fa37077e2e2ef769adc9e61970a33be8e1feb222c6 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "regular",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "REGULAR",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPLES",
    },
    "err": [IllegalArgumentError: Country must be filled],
    "hash": "850ef644d4bf7485d41306fa37077e2e2ef769adc9e61970a33be8e1feb222c6",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": undefined,
        "from": undefined,
        "roomsCount": 1,
        "to": undefined,
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;
